[package]
name           = "prometheus_exporter"
version        = "1.3.0"
edition        = "2018"
description    = "Prometheus Rust exporters for token balances and accounts across a various networks"

readme         = "README.md"
license        = "MIT"
repository     = "https://github.com/adjacentresearchxyz/prometheus_exporter"
documentation  = "https://github.com/adjacentresearchxyz/prometheus_exporter"
homepage       = "https://github.com/adjacentresearchxyz/prometheus_exporter"

keywords       = ["prometheus", "exporter", "solana"]
categories     = ["database"]

[dependencies]
log                  = "0.4.8"
env_logger           = "0.7.1"
clap                 = "2.33.0"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
thiserror            = "1.0"
num                  = "0.2.1"
hyper                = {version = "0.14", features = ["server"], optional = true }
hyper-rustls         = {version = "0.22", optional = true }
http                 = {version = "0.2",  optional = true }
hyper-tls = "0.5.0"
dotenv = "0.15.0"

[features]
hyper_server = ["hyper", "hyper-rustls", "http"]

[dev-dependencies]
tokio                = { version = "1.0", features = ["full"] }

[[example]]
name = "solana"
path = "./projects/solana.rs"
required-features = ["hyper_server"]
